# sample-rust-rest-api

./: Cargo.toml  Makefile  test_payload.json
src/: lib.rs  main.rs
src/routes/: hello_world.rs  mirror_body_string.rs  mirror_json.rs  mod.rs
src/service_context/: Cargo.toml
src/service_context/src/: lib.rs
